# botty-mcbotface

./: .archived.md  .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  activate.sh  conda.yaml  condaenv.rdjr_b77.requirements.txt  environment.yml  gui.py  main.py  pyproject.toml  requirements.txt  tools.py
prompts/: system.txt
utils/: logger.py
